# Numerical-Methods

./: .gitignore  CMakeLists.txt
1/: CMakeLists.txt  main.cpp
10/: CMakeLists.txt
11/: CMakeLists.txt
12/: CMakeLists.txt
2/: CMakeLists.txt  main.cpp
3/: CMakeLists.txt  main.cpp
4/: CMakeLists.txt  main.cpp
5/: CMakeLists.txt  main.cpp
6/: CMakeLists.txt  Lecture6_TerminalResults.docx  main.cpp  ~$cture6_TerminalResults.docx
7/: CMakeLists.txt  Lecture7_SolutionSlides.pptx  main.cpp  ~$Lecture7_SolutionSlides.pptx
8/: CMakeLists.txt  Lecture8_TerminalResults.docx  main.cpp  mainx2.cpp
9/: CMakeLists.txt  main.cpp
CheatSheet/: CMakeLists.txt
Eksamen/: CMakeLists.txt  Numeriske Metoder eksamen.docx  main.cpp  ~$meriske Metoder eksamen.docx
Eksamen/1/: CMakeLists.txt  main.cpp
Eksamen/2/: CMakeLists.txt  main.cpp
Eksamen/3/: CMakeLists.txt  main.cpp
Numerical-Recipes/: adapt.h  amebsa.h  amoeba.h  anneal.h  arithcode.h  asolve.h  banded.h  bessel.h  besselfrac.h  calendar.h  chebyshev.h  cholesky.h  circumcircle.h  cisi.h  convlv.h  correl.h  dawson.h  decchk.h  delaunay.h  derule.h  deviates.h  dfridr.h  dftintegrate.h  difeq.h  distributions.h  dynpro.h  eclass.h  eigen_sym.h  eigen_unsym.h  elliptint.h  erf.h  expint.h  fasper.h  fermi.h  fit_examples.h  fitab.h  fitexy.h  fitlin.h  fitmed.h  fitmrq.h  (+122 more)
man1/: CMakeLists.txt  Mandatory Exercise 1.docx  main.cpp
man2/: CMakeLists.txt  Mandatory Exercise 2.docx  main.cpp
man3/: CMakeLists.txt  Mandatory Exercise 3.docx  main.cpp
man4/: CMakeLists.txt  main.cpp
utils/: utilities.h
(+4 files in other folders)
