cmake_minimum_required(VERSION 3.20)
project(Exc1 DESCRIPTION "Exercise 1 Numerical Methods"
    LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_BUILD_PARALLEL_LEVEL 10)

add_compile_options(-Wall -Wextra -pedantic)
include_directories(Numerical-Recipes/)
include_directories(utils/)

add_subdirectory(1/)
add_subdirectory(2/)
add_subdirectory(3/)
add_subdirectory(4/)
add_subdirectory(5/)
add_subdirectory(6/)
add_subdirectory(7/)
add_subdirectory(8/)
add_subdirectory(9/)
add_subdirectory(10/)
add_subdirectory(11/)
add_subdirectory(12/)
add_subdirectory(man1/)
add_subdirectory(man2/)
add_subdirectory(man3/)
add_subdirectory(man4/)
add_subdirectory(CheatSheet)
add_subdirectory(Eksamen/)
